--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 a {
@@ -11,16 +12,32 @@ a {
   text-decoration: none;
 }
 
+h1{
+  font-weight: 900;
+  font-size: 70px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+h2{
+  font-weight: 300;
+  font-size: 40px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+h3{
+  font-weight: 300;
+  font-size: 32px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+
+
+
 * {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
+
