--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,21 +14,21 @@ a {
 
 h1{
   font-weight: 900;
-  font-size: 64px;
+  /* font-size: 64px; */
   margin-top: auto;
   margin-bottom: auto;
 }
 
 h2{
   font-weight: 300;
-  font-size: 40px;
+  /* font-size: 40px; */
   margin-top: auto;
   margin-bottom: auto;
 }
 
 h3{
   font-weight: 300;
-  font-size: 32px;
+  /* font-size: 32px; */
   margin-top: auto;
   margin-bottom: auto;
 }
