--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 html,
 body {
   padding: 0;
@@ -14,24 +14,28 @@ a {
 }
 
 h1{
-  font-weight: 900;
-  /* font-size: 64px; */
+
   margin-top: auto;
   margin-bottom: auto;
 }
 
 h2{
-  font-weight: 300;
-  /* font-size: 40px; */
+
   margin-top: auto;
   margin-bottom: auto;
 }
 
 h3{
-  font-weight: 300;
-  /* font-size: 32px; */
+ 
   margin-top: auto;
   margin-bottom: auto;
+}
+p{
+  font-family: 'Roboto', sans-serif;
+  text-indent: 30px;
+  text-align: justify;
+  text-justify: inter-word;
+  font-size: 20px;
 }
 
 
